<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativel_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InFoAppActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbarinfoapp"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:src="@drawable/iconapp" />

        <TextView
            android:id="@+id/tvten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_toRightOf="@id/imageView2"
            android:text="STUDENT MANAGER"
            android:textAlignment="center"
            android:textSize="23dp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout1"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout1"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text=" -Review "
                android:textColor="@color/blue"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/review_detail"
                android:textColor="@color/grey2"

                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/dang_nhap"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="22dp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/dang_nhap_detail"
                android:textColor="@color/grey2"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/quan_li_lop_hoc"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="22dp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/xem_danh_sach"
                android:textColor="@color/grey2"
                android:textSize="20dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/them_sua_soa_lop"
                android:textColor="@color/grey2"
                android:textSize="20dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/tim_lop_hoc"
                android:textColor="@color/grey2"
                android:textSize="20dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/chon_lop_hoc"
                android:textColor="@color/grey2"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/quan_ly_sv"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="22dp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/xem_danh_sach_sv"
                android:textColor="@color/grey2"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/them_sua_xoa_sv"
                android:textColor="@color/grey2"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/tim_kiem_sv"
                android:textColor="@color/grey2"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="40dp"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/lay_anh"
                android:textColor="@color/grey2"
                android:textSize="20dp" />


        </LinearLayout>


    </ScrollView>


</RelativeLayout>